# actix-diesel-sqlite

./: Cargo.toml  test.db
src/: db.rs  main.rs
