[package]
name = "actix-diesel-sqlite"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "=4.0.0-beta.8"
serde = "1.0.130"
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "1.4.7", features = ["sqlite"] }
dotenv = "0.15.0"
uuid = { version = "0.8", features = ["serde", "v4"] }